# linkstore

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
src/: embed.rs  lib.rs  read.rs  store.rs  tests.rs  util.rs  write.rs
src/embed/: ar.rs  coff.rs  decode.rs  elf.rs  encode.rs  io.rs  macho.rs  mod.rs  pe.rs
src/embed/embedder/: iter.rs  mod.rs  util.rs
src/embed/embedder/formats/: ar.rs  coff.rs  elf.rs  macho.rs  mod.rs  pe.rs
tests/: Cargo.toml
tests/src/: bin.rs  common.rs  lib.rs
