[package]
name = "linkstore"
version = "0.1.0"
edition = "2021"
authors = ["William Venner <william@venner.io>"]

[profile.linkstore-test-release]
inherits = "release"
lto = true
debug = false
opt-level = "s"

[workspace]
members = ["tests"]

[dependencies]
goblin = "0"
thiserror = "1"
ouroboros = "0"

[dev-dependencies]
libloading = "0"