[package]
name = "linkstore"
version = "1.0.2"
edition = "2021"
authors = ["William Venner <william@venner.io>"]
description = "Library for embedding, manipulating and retrieving data embedded in binaries using linker sections"
license = "MIT"
repository = "https://github.com/WilliamVenner/linkstore"
keywords = ["linker", "elf", "pe", "binary", "linkstore"]
categories = ["development-tools::build-utils", "development-tools::ffi", "encoding"]

[workspace]
members = ["tests"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.linkstore-test-release]
inherits = "release"
lto = true
debug = false
opt-level = "s"

[features]
default = ["embedder", "store"]
embedder = []
store = []

[dependencies]
goblin = "0.6"
thiserror = "1"
ouroboros = "0.15"
sealed = "0.4"

[dev-dependencies]
libloading = "0.7"
